$ First draft of Personalities feature.
Implement chat serialization and FluentModelPicker.

--- a/src/CommunityToolkit.WinForms.ConversationView/CommunityToolkit.WinForms.ConversationView.csproj
+++ b/src/CommunityToolkit.WinForms.ConversationView/CommunityToolkit.WinForms.ConversationView.csproj
@@ -26,4 +26,8 @@
   <ItemGroup>
     <ProjectReference Include="..\CommunityToolkit.WinForms.Mvvm\CommunityToolkit.WinForms.Mvvm.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="ConversationView_Debugging.cs" />
+  </ItemGroup>
 </Project>
