--- a/samples/cs/Chatty/Chatty.csproj
+++ b/samples/cs/Chatty/Chatty.csproj
@@ -6,6 +6,40 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Title>C.H.A.T.T.Y.</Title>
+    <Authors>Klaus Loeffelmann</Authors>
+    <Company>Microsoft</Company>
+    <Product>Chirpy Hyper-Accelerated Tattle Toolbox Yapper</Product>
   </PropertyGroup>
+
+	<Target Name="GenerateAssemblyInfoEx" BeforeTargets="CoreCompile">
+		<!-- Path for the generated code file -->
+		<PropertyGroup>
+			<GeneratedAssemblyInfoPath>$(IntermediateOutputPath)GeneratedAssemblyInfoEx.g.cs</GeneratedAssemblyInfoPath>
+		</PropertyGroup>
+
+		<!-- Write a single line of code that includes assembly-level metadata -->
+		<WriteLinesToFile File="$(GeneratedAssemblyInfoPath)" Lines="[assembly: System.Reflection.AssemblyMetadata(&quot;Authors&quot;, &quot;$(Authors)&quot;)]" Overwrite="true" />
+
+		<!-- Include the generated code file in your compilation -->
+		<ItemGroup>
+			<Compile Include="$(GeneratedAssemblyInfoPath)" AutoGen="True" DesignTime="False" DesignTimeSharedInput="False" />
+		</ItemGroup>
+	</Target>
+
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
+	</ItemGroup>
 
 </Project>
