--- a/src/CommunityToolkit.WinForms.Mvvm/CommunityToolkit.WinForms.Mvvm.csproj
+++ b/src/CommunityToolkit.WinForms.Mvvm/CommunityToolkit.WinForms.Mvvm.csproj
@@ -9,15 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="Azure.Identity" Version="1.13.1" />
+	  <PackageReference Include="Azure.Identity" Version="1.13.2" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.1" />
-	  <PackageReference Include="Microsoft.SemanticKernel" Version="1.33.0" />
+	  <PackageReference Include="Microsoft.SemanticKernel" Version="1.36.1" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
-	  <PackageReference Include="OpenAI" Version="2.1.0-beta.2" />
-	  <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.10.0" />
+	  <PackageReference Include="OpenAI" Version="2.1.0" />
+	  <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.11.1" />
 	  <PackageReference Include="System.Text.Json" Version="9.0.1" />
   </ItemGroup>
 
