--- a/tests/cs/CommunityToolkit.WinForms.BasicTests/CommunityToolkit.WinForms.BasicTests.csproj
+++ b/tests/cs/CommunityToolkit.WinForms.BasicTests/CommunityToolkit.WinForms.BasicTests.csproj
@@ -12,14 +12,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="xunit" Version="2.9.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.33.0" />
-	<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2903.40" />
-	<PackageReference Include="OpenAI" Version="2.1.0-beta.2" />
-	<PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.10.0" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.36.1" />
+	<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2957.106" />
+	<PackageReference Include="OpenAI" Version="2.1.0" />
+	<PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.11.1" />
 	<PackageReference Include="System.Text.Json" Version="9.0.1" />
   </ItemGroup>
 
@@ -29,6 +35,11 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="TestData\Roslyn\" />
+    <Folder Include="UnitTests\Roslyn\" />
   </ItemGroup>
 
 </Project>
